_calc.css
@charset "UTF-8";
body{
    -webkit-text-size-adjust: 100%;
    background-color: #000000;
}
div.lc{
    width: 98%;
    height: 22%;
    overflow: hidden;
    display:table;
    background-color: #A6BD9F;
    border-radius:7px;
    box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2) inset;
}
div.infoLCHeader{
    width: 100%;
    height: 20px;
    margin: 0 0 0 0 ;
    padding-left: 52px;
    padding-right: 23px;
    box-sizing: border-box;
    justify-content:space-around;
    min-width: 8%;
    flex-basis: 20%;
    background-color:transparent;
    display: flex;
    flex-direction: row;
    flex-wrap:nowrap;
}
div.infoLC{
    float: left;
    vertical-align: top;
    width: 50px;
    height: 100%;
    background-color:transparent;
    margin: 0 0 0 0 ;
    padding: 0 0 0 0 ;
    box-sizing: border-box;
}
div.calcLC{
    float: right;
    vertical-align:top;
    height: 100%;
    width: 100%;
    background-color: transparent;
    margin-left: -50px;
    padding-left: 55px;
    box-sizing: border-box;
}
div.funcbtn{
    margin:0 0 10px 0;
    padding:  0 0 0 0;
    justify-content:space-around;
    width: 100%;
    min-width: 8%;
    flex-basis: 20%;
    background-color:transparent;
    display: flex;
    flex-direction: row;
    flex-wrap:nowrap;
}
div.expe{
    margin:10px 0 5px 0;
    padding:  0 0 0 0;
    justify-content:space-around;
    width: 100%;
    min-width: 8%;
    flex-basis: 20%;
    background-color:transparent;
    display: flex;
    flex-direction: row;
    flex-wrap:nowrap;
    }
div.numbtn{
    margin:0 0 0 0;
    padding:  0 0 0 0;
    justify-content:space-around;
    width: 100%;
    min-width: 8%;
    flex-basis: 25%;
    background-color: transparent;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
button{
    border:none;
    width:24%;
    height: 65px;
    margin-top: 5px;
    font-size:30px;
    font-weight:normal;
    text-decoration:none;
    text-shadow:-1px -1px #555;
    text-align:center;
    padding:8px 10 10px;
    color:#fff;
    border-radius:5px;
    background-image:-webkit-gradient(
        linear,left top,left bottom,
        from(#6A6A6A),
        color-stop(0.49,#353535),
        color-stop(0.52,#323232),
        to(#323232));
}
button:active{
    background-image:-webkit-gradient(
        linear,left top,left bottom,
        from(#ff954e),
        color-stop(0.49,#ff6b08),
        color-stop(0.52,#ff6600),
        to(#ff6600));
}
.func:active{
    background-image:-webkit-gradient(
        linear,left top,left bottom,
        from(#ff954e),
        color-stop(0.49,#ff6b08),
        color-stop(0.52,#ff6600),
        to(#ff6600));
}
.func.clr:active{
    background-image:-webkit-gradient(
        linear,left top,left bottom,
        from(#ff954e),
        color-stop(0.49,#ff6b08),
        color-stop(0.52,#ff6600),
        to(#ff6600));
}
button.info{
    width: 10%;
    color: #A6BD9F;
    background-color: #000000;
}
button.func{
    color: #000000;
    font-size: 16px;
    font-weight: bold;
    height: 30px;
    margin: 0 2px 3px 2px ;
    text-shadow:none;
        background-image:-webkit-gradient(
        linear,left top,left bottom,
        from(#888888),
        color-stop(0.49,#A2A2A2),
        color-stop(0.52,#A2A2A2),
        to(#969696));
}

button.func.clr{
    color: #ffffff;
    background-image:-webkit-gradient(
        linear,left top,left bottom,
        from(#FB8484),
        color-stop(0.49,#EA4A4A),
        color-stop(0.52,#EA4A4A),
        to(#E84343));
}
button.exp{
    font-size: 30px;
}
input.Num{
    -webkit-appearance: none;
    border-radius: 0;
    font-size: 28px;
    text-align: right;
    width: 27%;
    height: 22%;
    border-radius:none;
    background-color: transparent;
    border-bottom:1px solid #000000;
    border-right:none;
    border-left:none;
    border-top:none;
    margin-top: 1%;
    margin-left: 1%;
    margin-right: 1%;
    margin-bottom: 2%;
}
input.NumgetFocus{
    -webkit-appearance: none;
    font-size: 28px;
    text-align: right;
    width: 27%;
    height: 22%;
    background-color: transparent;
    /* border-width:1px; */
    
    border-bottom:2px solid #000000;
    border-right:1px solid #A6BD9F;
    border-left:1px solid #A6BD9F;
    border-top:1px solid #A6BD9F;
    margin-top: 1%;
    margin-left: 1%;
    margin-right: 1%;
    margin-bottom: 2%;
}
input.msg{ /*右上メッセージ*/
    font-size: 3px;
    margin:2 1 1 1;
}
input.unit{
    font-size: 22px;
}
input.info{
    -webkit-appearance: none;
    height: 17px;
    width: 85%;
    font-size: 11px;
    text-align: center;
    vertical-align: middle;
    color:#111111;
    background-color:transparent ;
    border-width: 1px;
    border-color: #000000;
    border-radius:4px;
    margin:3 3 2 4;
    padding:1 1 1 1;
    vertical-align: top;
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}
input.expe{
    -webkit-appearance: none;
    font-size: 10px;
    text-align: center;
    color: #E8B844;
    height: 15px;
    width: 75px;
    margin: 0 0 0 0;
    padding:0 0 0 0;
    background-color:transparent;
    border-width:0px;
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}
input.info.tpsize{
    -webkit-appearance: none;
    border:none;
    font-weight:bolder;
}
p.cr::before{
    font-size: 14px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    text-align: center;
    color:#333333;
    background-color:transparent;
    border:none;
    width: 100%;
    height: 12px;
    margin: 0 0 0 0 ;
    padding: 0 0 0 0 ;
    content:"Copyright © kenty All Rights Reserved. - sCalc ver.20.07.12";
}
input.info.bgblack{
    border: none;
    color:#A6BD9F;
    background-color: #111111;
}
input.debgger{
    background-color:#272727;
    color:#00ec4796 ;
    height: 30px; 
    width:95%;
    font-size: 10px;
    text-align: left;
    margin: 10px 10px 10px 0px;
}

